--- a/choose-interesting/index.html
+++ b/choose-interesting/index.html
@@ -1,9 +1,7 @@
 ---
 layout: project_template_one
-title: "[suki-rai] - Grolsch"
-name: grolsch
+title: "Choose Interesting"
 index: /01
-project: Choose interesting
 client: Grolsch
 description: |
   This isn't just a story about beer. This is a story about every critical decision taken to bring you the taste of Grolsch. From the moment the swing-top pops the ice cold bottle, the sound of metal pings against the green glass and the unique taste of hops touches your lips, you know you've made an interesting choice. This is a multi-platform and multi-lingual web presence to engage audiences. An invitation to Choose Interesting by curating, creating and facilitating interesting content.
