--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: home
-title: [suki-rai]
-name: home
+title: home
+path: home
 ---
 
   <div class="project one">
-    {% include homepage_picturefill.html file="choose-interesting" %}
+    {% include homepage_picturefill.html file="choose-interesting" area="header" %}
   </div>
 
   <div id="container">
