--- a/ps-postcards/index.html
+++ b/ps-postcards/index.html
@@ -1,9 +1,7 @@
 ---
 layout: project_template_two
-title: "[suki-rai] - Ps"
-name: ps
+title: "PS Postcards"
 index: /07
-project: PS Postcards
 client: |
   Beautiful postcards sent from your mobile
   Ocean Labs
