nudge-fest by suki. added two new projects.

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ path: home
     </div>
         
     <div class="project">
-      {% include homepage_picturefill.html file="ps-postcards" %}
+      {% include homepage_picturefill.html file="i-hear-you" %}
       <div class="info">
         <p>/07</p>
-        <p><a href="ps-postcards">PS Postcards</a></p>
-        <p>Ocean Labs</p>
+        <p><a href="ps-postcards">I Hear You</a></p>
+        <p>V&A</p>
       </div>
     </div>
         
@@ -97,6 +97,24 @@ path: home
         <p>/11</p>
         <p><a href="making-energy-easier">Making energy easier</a></p>
         <p>E.ON</p>
+      </div>
+    </div>
+
+    <div class="project">
+      {% include homepage_picturefill.html file="ps-postcards" %}
+      <div class="info">
+        <p>/12</p>
+        <p><a href="ps-postcards">PS Postcards</a></p>
+        <p>Ocean Labs</p>
+      </div>
+    </div>
+
+    <div class="project">
+      {% include homepage_picturefill.html file="claridges" %}
+      <div class="info">
+        <p>/13</p>
+        <p><a href="ps-postcards">Claridges</a></p>
+        <p>Claridges</p>
       </div>
     </div>
 
