added copy for new projects

--- a/i-hear-you/index.html
+++ b/i-hear-you/index.html
@@ -1,13 +1,10 @@
 ---
 layout: project_template_two
-title: "I Hear you"
+title: "I Hear You"
 index: /07
 client: V&A
 description: |
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  A kinetic typography experiment designed for the V&A. Each letterform is a particle system and connected by springs to create the shape. They respond to sound input from a live or pre-recorded source. When sound exerts force on each spring, it causes the letters to dynamically respond and distort. The project was designed in Illustrator and built in Processing, an open source programming language. It showcased at the V&A's Digital Design Weekend with a spoken word recording from William S. Burroughs' Meeting Of International Conference Of Technological Psychiatry.
+link: http://www.vam.ac.uk/b/blog/news-learning-department/digital-design-challenge
+linktext: V&A Digital Design Weekend
 ---
