--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ path: home
     </div>
 
     <div class="project">
-      {% include homepage_picturefill.html file="claridges" %}
+      {% include homepage_picturefill.html file="claridges-hotel" %}
       <div class="info">
         <p>/13</p>
-        <p><a href="ps-postcards">Claridges</a></p>
-        <p>Claridges</p>
+        <p><a href="ps-postcards">Claridges Hotel</a></p>
+        <p>Maybourne Group</p>
       </div>
     </div>
 
