fixed project links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ path: home
       {% include homepage_picturefill.html file="i-hear-you" %}
       <div class="info">
         <p>/07</p>
-        <p><a href="ps-postcards">I Hear You</a></p>
+        <p><a href="i-hear-you">I Hear You</a></p>
         <p>V&A</p>
       </div>
     </div>
@@ -113,7 +113,7 @@ path: home
       {% include homepage_picturefill.html file="claridges-hotel" %}
       <div class="info">
         <p>/13</p>
-        <p><a href="ps-postcards">Claridges Hotel</a></p>
+        <p><a href="claridges-hotel">Claridges Hotel</a></p>
         <p>Maybourne Group</p>
       </div>
     </div>
