Refactored how the homepage is built and how new projects are added to the site. The homepage is now entirely automated. All that is required to add a new project to the site is to add a directory containing the project images and an index.html file with the front-matter describing the project. See the updated README for step-by-step instructions for doing this.

--- a/i-hear-you/index.html
+++ b/i-hear-you/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_one
 title: "I Hear You"
-index: /07
+index: 7
 client: V&A
 description: |
   A kinetic typography experiment designed for the V&A. Each letterform is a particle system and connected by springs to create the shape. They respond to sound input from a live or pre-recorded source. When sound exerts force on each spring, it causes the letters to dynamically respond and distort. The project was designed in Illustrator and built in Processing, an open source programming language. It showcased at the V&A's Digital Design Weekend with a spoken word recording from William S. Burroughs' Meeting Of International Conference Of Technological Psychiatry.
