--- a/is-the-i3-right-for-you/index.html
+++ b/is-the-i3-right-for-you/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_one
 title: "Is the BMW i3 right for you?"
-index: /10
+index: 10
 client: BMW
 description: |
   The BMW i3 launches in November 2013, the first BMW electric car. As part of the launch campaign, BMW asked for a tool that helps potential buyers get the full picture of what it will be like to own and drive. The result was a responsive web tool that guides potential buyers through a series of questions. Each question is designed to help realise how a BMW i3 can fit into your lifestyle, from educating about charge points to mapping a driving range. 
