--- a/the-shadow-line/index.html
+++ b/the-shadow-line/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_three
 title: "The Shadow Line"
-index: /08
+index: 8
 client: BBC
 description: |
   A major drama serial created by Hugo Blick for the BBC. The Shadow Line is a sophisticated conspiracy thriller. It brings to life a cinematic world of blurred morality and the conflicted characters who inhabit it. The poster art lends from the entwined lives of the three leading characters, creating an unbalanced questionable tension of what's really real, who's in charge and where's the truth? 
