--- a/afrikan/index.html
+++ b/afrikan/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_two
 title: "Afrikan"
-index: /03
+index: 4
 client: Afrikan Boy
 description: |
   Afrikan Boy is a grime MC from London who's worked with MIA and DJ Shadow. For his debut solo EP, Afrikan Boy asked for a cover design that is inspired by his London roots and pays tribute to his Nigerian heritage. The result was bold geometric lettering influenced by organic shapes and materials used in African sculpture.
