--- a/apocalypse/index.html
+++ b/apocalypse/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_two
 title: "Apocalypse"
-index: /02
+index: 3
 client: Colors
 description: |
   A magazine about the rest of the world, Colors investigates social issues and aims to show the world to the world, in the most diverse way. As part of the Colors lab, a place for experimentation, stories are crowdsourced to fuel creative discussion. This typographic expression featured in the lab and explores the theme of apocalypse. It's an interpretation of an apocalyptic mind where whichever way you turn, preparation is uncertain.
