--- a/become-electric/index.html
+++ b/become-electric/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_one
 title: "Become Electric"
-index: /06
+index: 6
 client: BMW
 description: |
   BMW launch their first electric car in November 2013, an electric car ahead of its competitors in terms of design, engineering and performance. BMW asked for an integrated campaign to launch the i3. Every element of the campaign was designed to tell the story of the i3, from sustainable production and economical performance, to what it means to become apart of the electric lifestyle. Each story played out as an interactive online episode where there was an exclusive opportunity to win an i3 test drive.
