--- a/making-energy-easier/index.html
+++ b/making-energy-easier/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_one
 title: "Making energy easier"
-index: /11
+index: 11
 client: E.ON
 description: |
   New UK legislation means energy companies must be more transparent with pricing plans. EON asked for a way to effectively communicate their new simplified plans. 'Best Deal For You' is a responsive web tool which guides you through a step by step process, visualises and informs on how to save money. It provides the opportunity to compare, select and purchase a price plan best suited to your needs.  
