--- a/unknown-disorder/index.html
+++ b/unknown-disorder/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_two
 title: "Unknown Disorder"
-index: /01
+index: 2
 client: OFFF
 description: |
   OFFF is the international festival of digital arts culture. Each year the festival briefs an open call to the creative community from any discipline. This typographic expression featured in the OFFF 2012 book and explored the theme Unknown Disorder. The design features bespoke lettering which jars against the geometric symmetry to create confusion, contradiction and tension in known order.
