--- a/whitechapel/index.html
+++ b/whitechapel/index.html
@@ -1,7 +1,7 @@
 ---
 layout: project_template_three
 title: "Whitechapel"
-index: /09
+index: 9
 client: ITV
 description: |
   A returning drama series created for ITV. Whitechapel is an atmospheric and brooding drama. Series 2 surfaces the violent world of 1960s villains, the Kray twins, in Whitechapel. Cinematic poster art, with supporting online activity, was designed to launch the new series. The art draws from the brooding atmosphere with a layered title treatment to add to the disconcerting narrative. 
