updated all small-screen header images with new versions. added license and blog links to footer. amended homepage font sizes. AGAIN.

--- a/ps-postcards/index.html
+++ b/ps-postcards/index.html
@@ -2,7 +2,7 @@
 layout: project_template_two
 title: "PS Postcards"
 index: 12
-client: Beautiful postcards sent from your mobile
+client: Ocean Labs
 description: |
   Holiday? Newborn baby? Wedding day? Every special moment has a special place in our memories. What if that moment was photographed and shared with our loved ones as a physical keep safe postcard? PS is a mobile app that allows you to create a personalised postcard, send it to anyone and anywhere in the world. A custom navigation, rich interactions and mobile in-app purchase allows your special moment to be enjoyed as special mail.     
 link: http://www.psilov.eu
