updated the readme with license info. added a summary paragraph to the license page.

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,12 @@ title: about
 
 	<br />
 
-	<h2>Licensing</h2>
+	<h2 style="font-size: 1.4em">Licensing</h2>
+
+	<br />
+	<br />
+
+	<p><i>This site is designed to be as open source and free to use as possible. You can use the design and code for personal projects, open source projects, commercial projects or anything else you want. You can amend the design and code as much as you like. You just need to retain the original copyright/license text if you distribute it. Full details are below.</i></p>
 
 	<br />
 	<br />
