changed 'about' to 'license' to be more specific

--- a/license/index.html
+++ b/license/index.html
@@ -23,7 +23,7 @@ title: about
 	<br />
 
 	<h3>Code license</h3>
-	<p>All original code including HTML, CSS, JavaScript and YAML used to make this site are &copy; 2013 Paul Carvill and licensed under the <a rel="license" href="/license.txt">MIT License</a></p>
+	<p>All original code including HTML, CSS, JavaScript and YAML used to make this site is &copy; 2013 Paul Carvill and licensed under the <a rel="license" href="/license.txt">MIT License</a></p>
 
 	<br />
 
