added new RCA project. added new image format for large header images on homepage - these are now called 'homepage_header' and homepage_header_m', so a project can have both a square and wide-format homepage image, which makes it easier to relegate a project from the 1st position to a lower one. also added new hover state on homepage image, featuring a pink 'X' and glitch effect on the background

--- a/claridges/index.html
+++ b/claridges/index.html
@@ -1,6 +1,6 @@
 ---
 layout: project_template_two
-title: "Claridge's Hotel"
+title: "Claridge's"
 index: 13
 client: Maybourne Group
 description: |
