removed homepage glitch hover state on touch devices. amended client name on RCA project.

--- a/royal-college-of-art/index.html
+++ b/royal-college-of-art/index.html
@@ -2,9 +2,9 @@
 layout: project_template_one
 title: "Royal College of Art"
 index: 1
-client: Royal College of Art
+client: RCA
 description: |
-  The Royal College of Art is a world renown institute. Under the creative direction of a team led by Neville Brody, the new site introduces a rich, more engaging, visual language. With a fluid grid for multi platform web presence, including bespoke interactions for mobile, the site drives core principles of dynamic movement and modernisation. Read more about the project in a <a href="http://www.designweek.co.uk/news/neville-brody-leads-rca-website-overhaul/3037557.article">Design Week</a> feature. 
+  The Royal College of Art is a world renowned institute. Under the creative direction of a team led by Neville Brody, the new site introduces a rich, more engaging, visual language. With a fluid grid for multi platform web presence, including bespoke interactions for mobile, the site drives core principles of dynamic movement and modernisation. Read more about the project in a <a href="http://www.designweek.co.uk/news/neville-brody-leads-rca-website-overhaul/3037557.article">Design Week</a> feature. 
 link: http://www.rca.ac.uk
 linktext: rca.ac.uk
 ---
